--- a/search/server/public/index.html
+++ b/search/server/public/index.html
@@ -74,7 +74,7 @@
 	
 	<div class="row-fluid">
 		<div class="span3">
-			<div class="well">
+			<div class="well" style="overflow:hidden">
 				<ul class="nav nav-list" id="filter-nav"></ul>
 			</div>
 			<div class="well" style="display:none">
