updating spectra landing page

--- a/search/server/public/index.html
+++ b/search/server/public/index.html
@@ -34,9 +34,9 @@
 	</script>
 
 </head>
-<body style="padding:2% 6%">
+<body>
 
-<div id="home" style="display:none">
+<div id="home" style="display:none; padding:2% 6%">
 	<div class="well" style="text-align:center">
 		<h2>ESIS Directory</h2>
 	</div>
@@ -46,7 +46,7 @@
 	
 </div>
 
-<div id="search" style="display:none">
+<div id="search" style="display:none; padding:2% 6%">
 	<div class="page-header" style="margin:0px">
 		<div class="row-fluid">
 			<div class="span9">
