lots of UI tweaks, updates

--- a/search/server/public/index.html
+++ b/search/server/public/index.html
@@ -3,10 +3,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
 	<title>ESIS</title>
-	
-	
+
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
 	<link href="css/bootstrap-responsive.min.css" rel="stylesheet" />
+	<link href="css/animate.css" rel="stylesheet" />
 	<link href="css/style.css" rel="stylesheet">
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -98,27 +98,14 @@
 		</div>
 	</div>
 
-</div>
-
-<div id="result" style="display:none">
-
-</div>
-
-<div id="all" style="display:none">
-	<div class="page-header" style="margin:0px">
-		<div class="row-fluid">
-			<div class="span9">
-				<h4>ESIS Directory</h4>
-			</div>
-			<div class="span3">
-				<a class='btn btn-primary pull-right' href="/#home" style="margin:5px"><i class="icon-home icon-white"></i> Home</a>
-				<a class='btn btn-primary pull-right' href="/#search" style="margin:5px"><i class="icon-search icon-white"></i> Search</a>
-			</div>
-		</div>
+	<div id="search-footer" style="text-align:center;margin-top: 100px;padding-top: 20px; border-top:1px solid #eee">
+		<div id="current-search-rest-link"></div>
 	</div>
-	<div id='all-nav' class="pagination"><ul></ul></div>
-	
+
 </div>
+
+<div id="result" style="display:none"></div>
+
 
 <div id="compare" style="display:none">
 	<div class="row-fluid">
