lots of small tweaks preping for demo

--- a/search/server/public/index.html
+++ b/search/server/public/index.html
@@ -39,9 +39,9 @@
 
 <div id="home" style="display:none; padding:2% 6%">
 	<div class="well" style="text-align:center">
-		<h2>ESIS Directory</h2>
+		<h2>EcoSIS Spectral Library</h2>
 	</div>
-	<div style="text-align:center;margin-bottom:25px">Welcome to the ESIS Directory, a useful tool for finding spectral data</div>
+	<div style="text-align:center;margin-bottom:25px">Welcome to the EcoSIS Spectral Library, a useful tool for finding spectral data</div>
 	
 	<div class="page-header" style="text-align:center;"><a href="/#search" class="btn btn-primary btn-large"><i class="icon-search icon-white"></i> Start Search</a></div>
 	
@@ -51,7 +51,7 @@
 	<div class="page-header" style="margin:0px">
 		<div class="row-fluid">
 			<div class="span9">
-				<h4>ESIS Directory</h4>
+				<h4>EcoSIS Spectral Library</h4>
 			</div>
 			<div class="span3">
 				<a class='btn btn-primary pull-right' href="/#home" style="margin:5px"><i class="icon-home icon-white"></i> Home</a>
@@ -139,6 +139,10 @@
 
 		<div id="group-loading">Loading...</div>
 	</div>
+</div>
+
+<div id="loading" style="display:none;position:fixed;top:50px;text-align:center;width:100%;" class="animated flipInX">
+	<div class="alert alert-info" style="display:inline-block;box-shadow: 0 0 5px white">Loading...</div>
 </div>
 
 </body>
