adding download links

--- a/search/public/index.html
+++ b/search/public/index.html
@@ -100,7 +100,17 @@
 	</div>
 
 	<div id="search-footer" style="text-align:center;margin-top: 100px;padding-top: 20px; border-top:1px solid #eee">
-		<div id="current-search-rest-link"></div>
+		<div class="row-fluid">
+			<div class="span4">
+				<div id="current-download-data-link"></div>
+			</div>
+			<div class="span4">
+				<div id="current-download-metadata-link"></div>
+			</div>
+			<div class="span4">
+				<div id="current-search-rest-link"></div>
+			</div>
+		</div>
 	</div>
 
 </div>
