adding new rest services, adding web components, adding dataset charting, changing dataset layout

--- a/search/app/index.html
+++ b/search/app/index.html
@@ -12,6 +12,7 @@
 	<!-- endbuild -->
 	
 	<!-- build:js scripts/build.js -->
+	<script src="bower_components/platform/platform.js"></script>
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="bower_components/handlebars/handlebars.js"></script>
@@ -26,6 +27,8 @@
 	<!-- endbuild -->
 
 	<script type="text/javascript" src="mqe/mqe.js"></script>
+
+	<link rel="import" href="elements.html">
 
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	<script type="text/javascript">
