--- a/search/app/elements/esis-derived-data-viewer.html
+++ b/search/app/elements/esis-derived-data-viewer.html
@@ -1,4 +1,4 @@
-<polymer-element name="esis-derived-data-viewer" attributes="package attribute">
+<polymer-element name="esis-derived-data-viewer" attributes="package item attribute">
     <template>
         <style>
             :host {
@@ -77,8 +77,16 @@
                 if( !this.package || !this.attribute ) return;
                 this.loading = true;
 
+                var groupBy = '';
+                var gbAttr = this.package.ecosis.attributes.dataset.group_by;
+                if(  gbAttr && gbAttr != '' && this.item[gbAttr] && this.item[gbAttr] != '' ) { 
+                    groupBy = '&group_by='+this.item[gbAttr];
+                }
+
+                var url = '/rest/getDerivedData?package_id='+this.package.id+groupBy+'&attribute='+this.attribute;
+
                 $.ajax({
-                    url : '/rest/getDerivedData?package_id='+this.package.id+'&attribute='+this.attribute,
+                    url : url,
                     success : function(resp) {
 
                         var arr = [[resp.sort || '', resp.attribute]], pt;
@@ -96,7 +104,7 @@
                     }.bind(this)
                 });
 
-                this.rest = window.location.origin+'/rest/getDerivedData?package_id='+this.package.id+'&attribute='+this.attribute;
+                this.rest = window.location.origin+url;
             },
 
             _getValue : function(val) {
