--- a/search/app/elements/esis-spectra-viewer.html
+++ b/search/app/elements/esis-spectra-viewer.html
@@ -26,6 +26,7 @@
         Polymer('esis-spectra-viewer', {
             dt : null,
             chart : null,
+            loading: false,
 
             rest : '',
 
