--- a/search/app/elements/esis-data-viewer.html
+++ b/search/app/elements/esis-data-viewer.html
@@ -1,7 +1,10 @@
 <polymer-element name="esis-data-viewer" attributes="package item spectra_count">
     <template>
-        <div hidden?="{{types.length > 0}}">
+        <div hidden?="{{types.length > 0 || package == null}}">
             This dataset has no data to visualize.
+        </div>
+        <div hidden?="{{package != null}}">
+            Loading...
         </div>
 
         <div hidden?="{{types.length == 0}}">
@@ -27,9 +30,6 @@
                 </esis-derived-data-viewer>
             </template>
         </div>
-
-
-
 
     </template>
     <script>
