updating landing page

--- a/search/app/elements/esis-spectra-viewer.html
+++ b/search/app/elements/esis-spectra-viewer.html
@@ -4,22 +4,50 @@
             :host {
                 display: block;
             }
+            .metadata {
+                max-height: 250px;
+                overflow: auto;
+                margin-left: 50px;
+            }
+
+            .metadata div {
+                margin: 7px;
+                padding: 10px;
+                box-shadow: 0 0 5px #888; 
+                display: inline-block;
+            }
         </style>
         <div id="root" style="height: 450px"></div>
 
-        Spectra #
-        <select value="{{selectedIndex}}" on-change="{{_updateDataTable}}">
-            <template repeat="{{index in indexes}}">
-                <option value="{{index}}">{{index}}</option>
-            </template>
-        </select>
+        <div layout horizontal>
+            <div>
+                <div style="margin-bottom: 15px">
+                    Spectra #
+                    <select value="{{selectedIndex}}" on-change="{{_updateDataTable}}">
+                        <template repeat="{{index in indexes}}">
+                            <option value="{{index}}">{{index}}</option>
+                        </template>
+                    </select>
 
-        <span style="padding:15px" hidden?="{{!loading}}">
-            Loading...
-        </span>
-
-        <div><a on-tap="{{print}}">Printable Version</a></div>
-        <div>Rest Link: <a href="{{rest}}" target="_blank">{{rest}}</a></div>
+                    <span style="padding:15px" hidden?="{{!loading}}">
+                        Loading...
+                    </span>
+                </div>
+                <div style="margin-bottom: 15px">
+                    <button on-tap="{{print}}">Printable Version</button>
+                </div>
+                <div>
+                    <a href="{{rest}}" target="_blank">Rest Link</a>
+                </div>
+            </div>
+            <div flex>
+                <div class="metadata" hidden?="{{metadata.length == 0 }}">
+                    <template repeat="{{m in metadata}}">
+                        <div><span style="color:#888">{{m.key}}:</span> <b>{{m.value}}</b></div>
+                    </template>
+                </div>
+            </div>
+        </div>
 
     </template>
     <script>
@@ -35,6 +63,9 @@
 
             selectedIndex : 0,
             indexes : [],
+            metadata : [],
+
+            ignoreList : ['_id', 'datapoints', 'ecosis'],
 
             onLoadHandlerSet : false,
 
@@ -88,16 +119,27 @@
                 }
 
                 var url = '/rest/getSpectra?package_id='+this.package.id+groupBy+'&index='+this.selectedIndex;
+                this.metadata = [];
 
                 $.ajax({
                     url : url,
                     success : function(resp) {
-
                         var arr = [], pt;
                         for( var i = 0; i < resp.datapoints.length; i++ ) {
                             pt = resp.datapoints[i];
                             if( this.ptRegex1.exec(pt.key) || this.ptRegex2.exec(pt.key) ) {
                                 arr.push([parseFloat(pt.key), parseFloat(pt.value)]);
+                            } else {
+                                metadata.push(pt);
+                            }
+                        }
+
+                        for( var key in resp ) {
+                            if( this.ignoreList.indexOf(key) == -1 && typeof resp[key] == 'string' ) {
+                                this.metadata.push({
+                                    key : key,
+                                    value : resp[key]
+                                })
                             }
                         }
 
