--- a/search/app/elements.html
+++ b/search/app/elements.html
@@ -1,5 +1,7 @@
 <link rel="import" href="bower_components/polymer/polymer.html">
 
+<link rel="import" href="bower_components/paper-slider/paper-slider.html">
+
 <link rel="import" href="elements/esis-spectra-viewer.html">
 <link rel="import" href="elements/esis-derived-data-viewer.html">
 <link rel="import" href="elements/esis-data-viewer.html">
