--- a/search/app/elements/esis-spectra-viewer.html
+++ b/search/app/elements/esis-spectra-viewer.html
@@ -1,4 +1,4 @@
-<polymer-element name="esis-spectra-viewer" attributes="package item spectra_count">
+    <polymer-element name="esis-spectra-viewer" attributes="package item spectra_count">
     <template>
         <style>
             :host {
@@ -15,35 +15,119 @@
                 padding: 10px;
                 box-shadow: 0 0 5px #888; 
                 display: inline-block;
+                cursor: pointer;
+            }
+            .selected {
+                border: 2px solid #888;
+                background-color: #eee;
+                margin: -2px;
+            }
+            .loading {
+                position: absolute;
+                top: 15px;
+                left: 15px;
+                font-size: 18px;
+                color: #333;
+            }
+            paper-slider  {
+                width : 100%;
+            }
+            .advanced {
+                padding: 10px;
+                box-shadow: 0 0 5px #888 inset;
+                margin: 0px 10px 25px 20px;
             }
         </style>
-        <div id="root" style="height: 450px"></div>
+
+        <div layout horizontal>
+            <div hidden?="{{filters.length == 0}}">
+                Filters:&nbsp;&nbsp;
+            </div>
+            <div flex>
+                <template repeat="{{filter, i in filters}}">
+                    <a class="btn btn-default" filterIndex="{{i}}" on-click="{{removeFilter}}"><span style="color:#888">{{filter.key}}:</span> <b>{{filter.value}}</b></a>
+                </template>
+            </div>
+        </div>
+
+        <div style="position:relative">
+            <div id="root" style="height: 450px"></div>
+            <div class="loading" hidden?="{{!loading}}">
+                Loading...
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <a class="btn btn-link" on-tap="{{toggleAdvanced}}">Advanced</a>
+            </div>
+            <div class="advanced" hidden?="{{!showAdvanced}}">
+
+                <h4>Set Wavelength Range</h4>
+                <table class="table">
+                    <tr>
+                        <td>Min Wavelength ({{wavelengths[0]}})</td>
+                        <td>
+                            <input id="minWavelength" type="number" on-change="{{setMinWavelength}}" />
+                        </td>
+                    </tr>
+                     <tr>
+                        <td>Max Wavelength ({{wavelengths[wavelengths.length-1]}})</td>
+                        <td>
+                            <input id="maxWavelength" type="number" on-change="{{setMaxWavelength}}" />
+                        </td>
+                    </tr>
+                </table>
+
+                <h4>Add Filter from Dataset</h4>
+                <table class="table">
+                    <tr>
+                        <td>Attribute</td>
+                        <td>
+                            <select value="{{dsFilter}}">
+                                <template repeat="{{attr in dsFilters}}">
+                                    <option value="{{attr}}">{{attr}}</option>
+                                </template>
+                            </select>
+                        </td>
+                    <tr hidden?="{{dsFilter == ''}}">
+                        <td>Value</td>
+                        <td>
+                            <select value="{{dsFilterValue}}" on-change="{{addDsFilter}}">
+                                <template repeat="{{val in dsFilterValues}}">
+                                    <option value="{{val}}">{{val}}</option>
+                                </template>
+                            </select>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
 
         <div layout horizontal>
             <div>
                 <div style="margin-bottom: 15px">
                     Spectra #
-                    <select value="{{selectedIndex}}" on-change="{{_updateDataTable}}">
+                    <select value="{{selectedIndex}}" on-change="{{_updateFromSelect}}">
                         <template repeat="{{index in indexes}}">
                             <option value="{{index}}">{{index}}</option>
                         </template>
                     </select>
-
-                    <span style="padding:15px" hidden?="{{!loading}}">
-                        Loading...
-                    </span>
+                    of {{totalSpectra}}
                 </div>
                 <div style="margin-bottom: 15px">
-                    <button on-tap="{{print}}">Printable Version</button>
+                    <a class="btn btn-default" on-tap="{{print}}">Printable Version</a>
                 </div>
                 <div>
-                    <a href="{{rest}}" target="_blank">Rest Link</a>
+                    <a class="btn btn-default" href="{{rest}}" target="_blank">Rest Link</a>
                 </div>
             </div>
             <div flex>
                 <div class="metadata" hidden?="{{metadata.length == 0 }}">
                     <template repeat="{{m in metadata}}">
-                        <div><span style="color:#888">{{m.key}}:</span> <b>{{m.value}}</b></div>
+                        <div class="{{m.class}}" filterKey="{{m.key}}" filterValue="{{m.value}}" on-click="{{addFilterFromBtn}}">
+                            <span style="color:#888">{{m.key}}:</span> <b>{{m.value}}</b>
+                        </div>
                     </template>
                 </div>
             </div>
@@ -53,24 +137,40 @@
     <script>
         Polymer('esis-spectra-viewer', {
             dt : null,
+            dataArray : [],
             chart : null,
             loading: false,
+
+            showAdvanced : false,
 
             rest : '',
 
             ptRegex1 : /^-?\d+\.?\d*$/,
             ptRegex2 : /^-?\d*\.\d+$/,
 
+            dsFilter : '',
+            dsFilters : [],
+            dsFilterValue : '',
+            dsFilterValues : [],
+
             selectedIndex : 0,
+            totalSpectra : 0,
             indexes : [],
             metadata : [],
+
+            filters : [],
 
             ignoreList : ['_id', 'datapoints', 'ecosis'],
 
             onLoadHandlerSet : false,
 
+            wavelengths : [],
+            maxWavelength : 0,
+            minWavelength : 0,
+
             observe : {
-                package : '_update'
+                package : '_update',
+                dsFilter : '_updateFilterValues'
             },
 
             ready : function() {
@@ -104,61 +204,162 @@
 
                 this.indexes = [];
                 this.selectedIndex = 0;
+                this.totalSpectra = this.spectra_count;
 
-                for( var i = 0; i < this.spectra_count; i++ ) this.indexes.push(i);
-                this._updateDataTable();
-            },
-
-            _updateDataTable : function() {
-                this.loading = true;
-
-                var groupBy = '';
-                var gbAttr = this.package.ecosis.attributes.dataset.group_by;
-                if(  gbAttr && gbAttr != '' && this.item[gbAttr] && this.item[gbAttr] != '' ) { 
-                    groupBy = '&group_by='+this.item[gbAttr];
+                this.dsFilters = [''];
+                for( var key in this.item ) {
+                    if( this.ignoreList.indexOf(key) > -1 ) continue;
+                    this.dsFilters.push(key);
                 }
 
-                var url = '/rest/getSpectra?package_id='+this.package.id+groupBy+'&index='+this.selectedIndex;
-                this.metadata = [];
+                // if there is a group_by attribute, set as default filter
+                this.filters = [];
+                if( this.item.ecosis.group_by && this.item.ecosis.group_by != '' ) {
+                    this._addFilter(this.item.ecosis.group_by, this.item[this.item.ecosis.group_by][0]);
+                }
+
+                this._updateDataTable(true);
+            },
+
+            _updateFilterValues : function() {
+                this.dsFilterValues = [''];
+                var attr = this.item[this.dsFilter];
+                if( !attr ) return;
+
+                for( var i = 0; i < attr.length; i++ ) {
+                    this.dsFilterValues.push(attr[i]);
+                }
+            },
+
+            addDsFilter : function() {
+                this.async(function(){
+                    if( this.dsFilterValue == '' ) return;
+
+                    this._addFilter(this.dsFilter, this.dsFilterValue, true);
+                    this.dsFilter = '';
+                });
+            },
+
+            _updateFromSelect : function() {
+                this._updateDataTable(false);
+            },
+
+            _updateDataTable : function(resetWavelengths) {
+                this.loading = true;
+
+                var filters = '';
+                var fArray = [];
+                for( var i = 0; i < this.filters.length; i++ ) {
+                    var obj = {};
+                    obj[this.filters[i].key] = this.filters[i].value;
+                    fArray.push(obj);
+                }
+                if( this.filters.length > 0 ) {
+                    filters = '&filters='+encodeURIComponent(JSON.stringify(fArray));
+                }
+
+                var url = '/rest/getSpectra?package_id='+this.package.id+filters+'&index='+this.selectedIndex;
 
                 $.ajax({
                     url : url,
                     success : function(resp) {
-                        var arr = [], pt;
+                        this.metadata = [];
+                        this.indexes = [];
+                        this.wavelengths = [];
+                        this.totalSpectra = resp.total;
+                        resp = resp.item;
+
+                        for( var i = 0; i < this.totalSpectra; i++ ) this.indexes.push(i);
+
+                        this.dataArray = [];
+                        var pt;
                         for( var i = 0; i < resp.datapoints.length; i++ ) {
                             pt = resp.datapoints[i];
                             if( this.ptRegex1.exec(pt.key) || this.ptRegex2.exec(pt.key) ) {
-                                arr.push([parseFloat(pt.key), parseFloat(pt.value)]);
+                                this.dataArray.push([parseFloat(pt.key), parseFloat(pt.value)]);
                             } else {
                                 metadata.push(pt);
                             }
                         }
 
+
                         for( var key in resp ) {
-                            if( this.ignoreList.indexOf(key) == -1 && typeof resp[key] == 'string' ) {
+                            if( this.ignoreList.indexOf(key) == -1 && typeof resp[key] == 'string' && resp[key] != '' ) {
                                 this.metadata.push({
                                     key : key,
-                                    value : resp[key]
+                                    value : resp[key],
+                                    class : this._getMetadataClass(key, resp[key])
                                 })
                             }
                         }
 
-                        arr.sort(function(a, b){
+                        this.dataArray.sort(function(a, b){
                             if( a[0] < b[0] ) return -1;
                             if( a[0] > b[0] ) return 1;
                             return 0;
                         });
-                        for( var i = 0; i < arr.length; i++ ) arr[i][0] = arr[i][0]+'';
+                        for( var i = 0; i < this.dataArray.length; i++ ) {
+                            this.wavelengths.push(this.dataArray[i][0]);
+                        }
 
-                        arr.splice(0,0,['Wavelength','Reflectance']);
+                        if( resetWavelengths ) {
+                            this.setWavelength('min', this.wavelengths[0]);
+                            this.setWavelength('max', this.wavelengths[this.wavelengths.length-1]);
+                        } else {
+                            if( this.minWavelength < this.wavelengths[0] ) {
+                                this.setWavelength('min', this.wavelengths[0]);
+                            }
+                            if( this.maxWavelength > this.wavelengths[this.wavelengths.length-1] ) {
+                                this.setWavelength('max', this.wavelengths[this.wavelengths.length-1]);
+                            }
+                        }
 
-                        this.dt = google.visualization.arrayToDataTable(arr);
-                        this.redraw();
+                        this.dataArray.splice(0,0,['Wavelength','Reflectance']);
+
+                        this.filterByWavelength();
                         this.loading = false;
                     }.bind(this)
                 });
 
                 this.rest = window.location.origin+url;
+            },
+
+            setWavelength : function(type, value) {
+                this.$[type+'Wavelength'].value = value;
+                this[type+'Wavelength'] = value;
+            },
+
+            setMinWavelength : function() {
+                this.minWavelength = parseFloat(this.$.minWavelength.value);
+                if( this.minWavelength < this.wavelengths[0] ) {
+                    this.setWavelength('min', this.wavelengths[0]);
+                } else if ( this.minWavelength > this.maxWavelength ) {
+                    this.setWavelength('min', this.maxWavelength);
+                }
+                this.filterByWavelength();
+            },
+
+            setMaxWavelength : function() {
+                this.maxWavelength = parseFloat(this.$.maxWavelength.value);
+                if( this.maxWavelength >= this.wavelengths[this.wavelengths.length-1] ) {
+                    this.setWavelength('max', this.wavelengths[this.wavelengths.length-1]);
+                } else if ( this.minWavelength > this.maxWavelength ) {
+                    this.setWavelength('max', this.minWavelength);
+                }
+                this.filterByWavelength();
+            },
+
+            filterByWavelength : function() {
+                var arr = [this.dataArray[0]];
+                for( var i = 1; i < this.dataArray.length; i++ ) {
+                    if( this.dataArray[i][0] >= this.minWavelength && 
+                        this.dataArray[i][0] <= this.maxWavelength ) {
+                        arr.push([this.dataArray[i][0]+'', this.dataArray[i][1]]);
+                    }
+                }
+
+                this.dt = google.visualization.arrayToDataTable(arr);
+                this.redraw();
             },
 
             redraw : function() {
@@ -188,6 +389,69 @@
                     }
 
                 this.chart.draw(this.dt, options);
+            },
+
+            removeFilter : function(e) {
+                var index = parseInt(e.currentTarget.getAttribute('filterIndex'));
+                this._removeFilter(index, 1, true);
+            },
+
+            addFilterFromBtn : function(e) {
+                this._addFilter(e.currentTarget.getAttribute('filterKey'), e.currentTarget.getAttribute('filterValue'), true);
+            },
+
+            _getMetadataClass : function(key, value) {
+                for( var i = 0; i < this.filters.length; i++ ) {
+                    if( this.filters[i].key == key && this.filters[i].value == value ) {
+                        return 'selected';
+                    }
+                }
+                return '';
+            },
+
+            _removeFilter : function(index, update) {
+                var item = this.filters.splice(index, 1)[0];
+
+                for( var i = 0; i < this.metadata.length; i++ ) {
+                    if( this.metadata[i].key == item.key && this.metadata[i].value == item.value ) {
+                        this.metadata[i].class = '';
+                        break;
+                    }
+                }
+
+                if( update ) {
+                    this.selectedIndex = 0;
+                    this._updateDataTable();
+                }
+            },
+
+            _addFilter : function(key, value, update) {
+                for( var i = 0; i < this.filters.length; i++ ) {
+                    if( this.filters[i].key == key ) {
+                        _removeFilter(i);
+                        break;
+                    }
+                }
+
+                for( var i = 0; i < this.metadata.length; i++ ) {
+                    if( this.metadata[i].key == key && this.metadata[i].value == value ) {
+                        this.metadata[i].class = 'selected';
+                        break;
+                    }
+                }
+
+                this.filters.push({
+                    key : key,
+                    value : value
+                });
+                if( update ) {
+                    this.selectedIndex = 0;
+                    this._updateDataTable(false);
+                }
+            },
+
+            toggleAdvanced : function() {
+                this.showAdvanced = !this.showAdvanced;
             }
 
         });
