adding icons, dataset downloader

--- a/search/app/elements.html
+++ b/search/app/elements.html
@@ -2,6 +2,8 @@
 
 <link rel="import" href="bower_components/paper-slider/paper-slider.html">
 
+<link rel="import" href="elements/esis-icon.html">
+<link rel="import" href="elements/esis-data-downloader.html">
 <link rel="import" href="elements/esis-spectra-viewer.html">
 <link rel="import" href="elements/esis-derived-data-viewer.html">
 <link rel="import" href="elements/esis-data-viewer.html">
