--- a/search/app/elements/esis-spectra-viewer.html
+++ b/search/app/elements/esis-spectra-viewer.html
@@ -40,7 +40,15 @@
             esis-icon {
                 color: #428bca;
             }
+            .addLabel {
+                padding: 5px;
+                margin: 2px;
+                background: #eee;
+                border-radius: 6px;
+            }
         </style>
+
+        <core-localstorage name="esis_compare" value="{{compareList}}"></core-localstorage>
 
         <div layout horizontal>
             <div hidden?="{{filters.length == 0}}">
@@ -65,8 +73,34 @@
                 <a class="btn btn-link" on-tap="{{toggleAdvanced}}"><esis-icon icon="fa-cogs"></esis-icon> Advanced</a>
             </div>
             <div class="advanced" hidden?="{{!showAdvanced}}">
+                <h4>Compare Spectra</h4>
+                <table class="table">
+                    <tr>
+                        <td>
+                            <a class="btn btn-default" on-tap="{{startCompareAdd}}"><esis-icon icon="fa-plus"></esis-icon> Add to Compare List</a>
+                            <div hidden?="{{!addingCompare}}" class="addLabel">
+                                Specta Label: <input type="text" value="{{compareLabel}}" />
+                                <a class="btn btn-default" on-tap="{{addCompare}}" ><esis-icon icon="fa-plus"></esis-icon> Add</a>
+                                <a class="btn btn-default" on-tap="{{cancelAddCompare}}" >Cancel</a>
+                            </div>
+                        </td>
+                        <td align="right">
+                            <input type="checkbox" checked="{{showCompare}}"/> Show Compare Spectra
+                        </td>
+                    </tr>
+                    <tr hidden?="{{!showCompare}}">
+                        <td colspan="2">
+                            <h6>Comparing:</h6>
+                            <template repeat="{{spectra, i in compareList}}">
+                                <a class="btn btn-default" index="{{i}}" on-tap="{{removeCompare}}"><esis-icon icon="fa-remove"></esis-icon> {{spectra.name}}</a>
+                            </template>
+                        </td>
+                    </tr>
+                </table>
 
-                <h4>Set Wavelength Range</h4>
+
+
+                <h4 style="margin-top:40px">Set Wavelength Range</h4>
                 <table class="table">
                     <tr>
                         <td>Min Wavelength ({{wavelengths[0]}})</td>
@@ -82,7 +116,7 @@
                     </tr>
                 </table>
 
-                <h4>Add Filter from Dataset</h4>
+                <h4 style="margin-top:40px">Add Filter from Dataset</h4>
                 <table class="table">
                     <tr>
                         <td>Attribute</td>
@@ -152,6 +186,11 @@
             ptRegex1 : /^-?\d+\.?\d*$/,
             ptRegex2 : /^-?\d*\.\d+$/,
 
+            showCompare : false,
+            addingCompare : false,
+            compareLabel : false,
+            compareList : [],
+
             dsFilter : '',
             dsFilters : [],
             dsFilterValue : '',
@@ -172,10 +211,14 @@
             maxWavelength : 0,
             minWavelength : 0,
 
+            resp : null,
+
             observe : {
                 filters : '_fireUpdate',
                 package : '_update',
-                dsFilter : '_updateFilterValues'
+                dsFilter : '_updateFilterValues',
+                compareList : '_compareUpdated',
+                showCompare : '_createTableArray'
             },
 
             ready : function() {
@@ -253,6 +296,12 @@
                 this._updateDataTable(false);
             },
 
+            _compareUpdated : function() {
+                if( this.showCompare ) {
+                    this._updateDataTable(false);
+                }
+            },
+
             _updateDataTable : function(resetWavelengths) {
                 this.loading = true;
 
@@ -272,65 +321,128 @@
                 $.ajax({
                     url : url,
                     success : function(resp) {
-                        this.metadata = [];
-                        this.indexes = [];
-                        this.wavelengths = [];
                         this.totalSpectra = resp.total;
-                        resp = resp.item;
-
-                        for( var i = 0; i < this.totalSpectra; i++ ) this.indexes.push(i);
-
-                        this.dataArray = [];
-                        var pt;
-                        for( var i = 0; i < resp.datapoints.length; i++ ) {
-                            pt = resp.datapoints[i];
-                            if( this.ptRegex1.exec(pt.key) || this.ptRegex2.exec(pt.key) ) {
-                                this.dataArray.push([parseFloat(pt.key), parseFloat(pt.value)]);
-                            } else {
-                                metadata.push(pt);
-                            }
-                        }
-
-
-                        for( var key in resp ) {
-                            if( this.ignoreList.indexOf(key) == -1 && typeof resp[key] == 'string' && resp[key] != '' ) {
-                                this.metadata.push({
-                                    key : key,
-                                    value : resp[key],
-                                    class : this._getMetadataClass(key, resp[key])
-                                })
-                            }
-                        }
-
-                        this.dataArray.sort(function(a, b){
-                            if( a[0] < b[0] ) return -1;
-                            if( a[0] > b[0] ) return 1;
-                            return 0;
-                        });
-                        for( var i = 0; i < this.dataArray.length; i++ ) {
-                            this.wavelengths.push(this.dataArray[i][0]);
-                        }
-
-                        if( resetWavelengths ) {
-                            this.setWavelength('min', this.wavelengths[0]);
-                            this.setWavelength('max', this.wavelengths[this.wavelengths.length-1]);
-                        } else {
-                            if( this.minWavelength < this.wavelengths[0] ) {
-                                this.setWavelength('min', this.wavelengths[0]);
-                            }
-                            if( this.maxWavelength > this.wavelengths[this.wavelengths.length-1] ) {
-                                this.setWavelength('max', this.wavelengths[this.wavelengths.length-1]);
-                            }
-                        }
-
-                        this.dataArray.splice(0,0,['Wavelength','Reflectance']);
-
-                        this.filterByWavelength();
-                        this.loading = false;
+                        this.resp = resp.item;
+                        this._createTableArray(resetWavelengths);
                     }.bind(this)
                 });
 
                 this.rest = window.location.origin+url;
+            },
+
+            _createTableArray : function(resetWavelengths) {
+                if( typeof resetWavelengths == 'object' ) resetWavelengths = false;
+
+                this.metadata = [];
+                this.indexes = [];
+                this.wavelengths = [];
+
+                for( var i = 0; i < this.totalSpectra; i++ ) this.indexes.push(i);
+
+                this.dataArray = [];
+                var wavelengthHash = {}, hasCurrent = false;
+                
+                if( this.showCompare ) {
+                    var i;
+                    for( i = 0; i < this.compareList.length; i++ ) {
+                        this._addToDataArray(this.compareList[i].spectra, wavelengthHash, i);
+                        if( this.compareList[i].spectra._id == this.resp._id ) hasCurrent = true;
+                    }
+                    if( !hasCurrent ) {
+                        this._addToDataArray(this.resp, wavelengthHash, i);
+                    }
+
+                    for( var key in wavelengthHash ) {
+                        this.dataArray.push( wavelengthHash[key] );
+                    }
+
+                } else {
+                    for( var i = 0; i < this.resp.datapoints.length; i++ ) {
+                        pt = this.resp.datapoints[i];
+                        if( this.ptRegex1.exec(pt.key) || this.ptRegex2.exec(pt.key) ) {
+                            this.dataArray.push([parseFloat(pt.key), parseFloat(pt.value)]);
+                        } else {
+                            metadata.push(pt);
+                        }
+                    }
+                }
+
+
+                for( var key in this.resp ) {
+                    if( this.ignoreList.indexOf(key) == -1 && typeof this.resp[key] == 'string' && this.resp[key] != '' ) {
+                        this.metadata.push({
+                            key : key,
+                            value : this.resp[key],
+                            class : this._getMetadataClass(key, this.resp[key])
+                        })
+                    }
+                }
+
+                this.dataArray.sort(function(a, b){
+                    if( a[0] < b[0] ) return -1;
+                    if( a[0] > b[0] ) return 1;
+                    return 0;
+                });
+                for( var i = 0; i < this.dataArray.length; i++ ) {
+                    this.wavelengths.push(this.dataArray[i][0]);
+                }
+
+                if( resetWavelengths ) {
+                    this.setWavelength('min', this.wavelengths[0]);
+                    this.setWavelength('max', this.wavelengths[this.wavelengths.length-1]);
+                } else {
+                    if( this.minWavelength < this.wavelengths[0] ) {
+                        this.setWavelength('min', this.wavelengths[0]);
+                    }
+                    if( this.maxWavelength > this.wavelengths[this.wavelengths.length-1] ) {
+                        this.setWavelength('max', this.wavelengths[this.wavelengths.length-1]);
+                    }
+                }
+
+                if( this.showCompare ) {
+                    var header = ['Wavelength'];
+                    for( var i = 0; i < this.compareList.length; i++ ) {
+                        if( this.compareList[i].spectra._id == this.resp._id ) {
+                            header.push(this.compareList[i].name+' (Current)');
+                        } else {
+                            header.push(this.compareList[i].name);
+                        }
+                    }
+                    if( !hasCurrent ) {
+                        header.push('Current');
+                    }
+                    this.dataArray.splice(0,0,header);
+                } else {
+                    this.dataArray.splice(0,0,['Wavelength','Reflectance']);
+                }
+                
+
+                this.filterByWavelength();
+                this.loading = false;
+            },
+
+            _addToDataArray : function(spectra, wavelengthHash, i) {
+                var cWaves = [], pt;
+                for( var j = 0; j < spectra.datapoints.length; j++ ) {
+                    pt = spectra.datapoints[j];
+
+                    if( this.ptRegex1.exec(pt.key) || this.ptRegex2.exec(pt.key) ) {
+                        if( wavelengthHash[pt.key] !== undefined ) {
+                            wavelengthHash[pt.key].push(parseFloat(pt.value));
+                        } else {
+                            wavelengthHash[pt.key] = [parseFloat(pt.key)];
+                            for( var z = 0; z < i; z++ ) wavelengthHash[pt.key].push(null);
+                            wavelengthHash[pt.key].push(parseFloat(pt.value));
+                        }
+                        cWaves.push(pt.key);
+                    }
+                }
+
+                // add any waves this one is missing
+                for( var key in wavelengthHash ) {
+                    if( cWaves.indexOf(key) > -1 ) continue;
+                    wavelengthHash[key].push(null);
+                }
             },
 
             setWavelength : function(type, value) {
@@ -363,7 +475,10 @@
                 for( var i = 1; i < this.dataArray.length; i++ ) {
                     if( this.dataArray[i][0] >= this.minWavelength && 
                         this.dataArray[i][0] <= this.maxWavelength ) {
-                        arr.push([this.dataArray[i][0]+'', this.dataArray[i][1]]);
+
+                        var clone = this.dataArray[i].slice(0);
+                        clone[0] = clone[0]+'';
+                        arr.push(clone);
                     }
                 }
 
@@ -461,6 +576,50 @@
 
             toggleAdvanced : function() {
                 this.showAdvanced = !this.showAdvanced;
+            },
+
+            startCompareAdd : function() {
+                if( this.compareList.length >= 10 ) {
+                    return alert('You can only compare up to 10 spectra a one time.  Please remove one spectra then retry.');
+                }
+
+                for( var i = 0; i < this.compareList.length; i++ ) {
+                    if( this.compareList[i].spectra._id == this.resp._id ) {
+                        return alert('This spectra is already in your compare list');
+                    }
+                }
+
+                this.addingCompare = true;
+                this.compareLabel = this._getLabel(this.item.ecosis.package_title, 0);
+            },
+
+            removeCompare : function(e) {
+                var index = parseInt(e.currentTarget.getAttribute('index'));
+                this.compareList.splice(index, 1);
+            },
+
+            cancelAddCompare : function() {
+                this.addingCompare = false;
+            },
+
+            addCompare : function() {
+                this.compareList.push({
+                    name : this.compareLabel,
+                    spectra : this.resp
+                });
+                this.addingCompare = false;
+                this.showCompare = true;
+            },
+
+            _getLabel : function(label, index) {
+                var l = (index == 0) ? label : label+' - '+index;
+                for( var i = 0; i < this.compareList.length; i++ ) {
+                    if( this.compareList[i].name == l ) {
+                        index++;
+                        return this._getLabel(label, index);
+                    } 
+                }
+                return l;
             }
 
         });
