--- a/search/app/index.html
+++ b/search/app/index.html
@@ -13,6 +13,7 @@
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="bower_components/handlebars/handlebars.js"></script>
+	<script src="bower_components/js-md5/js/md5.js"></script>
 
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/search.js"></script>
