removing 'group_by' view

--- a/search/app/elements/esis-spectra-viewer.html
+++ b/search/app/elements/esis-spectra-viewer.html
@@ -64,7 +64,7 @@
         <div style="position:relative">
             <div id="root" style="height: 450px"></div>
             <div class="loading" hidden?="{{!loading}}">
-                Loading...
+                Loading #{{selectedIndex}}... 
             </div>
         </div>
 
@@ -212,6 +212,7 @@
             minWavelength : 0,
 
             resp : null,
+            xhr : null,
 
             observe : {
                 filters : '_fireUpdate',
@@ -318,9 +319,13 @@
 
                 var url = '/rest/getSpectra?package_id='+this.package.id+filters+'&index='+this.selectedIndex;
 
-                $.ajax({
+                if( this.xhr != null ) this.xhr.abort();
+
+                this.xhr = $.ajax({
                     url : url,
                     success : function(resp) {
+                        this.xhr = null;
+                        
                         this.totalSpectra = resp.total;
                         this.resp = resp.item;
                         this._createTableArray(resetWavelengths);
