--- a/search/app/elements/esis-spectra-viewer.html
+++ b/search/app/elements/esis-spectra-viewer.html
@@ -339,6 +339,8 @@
             _createTableArray : function(resetWavelengths) {
                 if( typeof resetWavelengths == 'object' ) resetWavelengths = false;
 
+
+
                 this.metadata = [];
                 this.indexes = [];
                 this.wavelengths = [];
@@ -347,6 +349,8 @@
 
                 this.dataArray = [];
                 var wavelengthHash = {}, hasCurrent = false;
+
+                if( this.totalSpectra == 0 ) return;
                 
                 if( this.showCompare ) {
                     var i;
@@ -368,7 +372,7 @@
                         if( this.ptRegex1.exec(pt.key) || this.ptRegex2.exec(pt.key) ) {
                             this.dataArray.push([parseFloat(pt.key), parseFloat(pt.value)]);
                         } else {
-                            metadata.push(pt);
+                            this.metadata.push(pt);
                         }
                     }
                 }
