--- a/search/app/index.html
+++ b/search/app/index.html
@@ -181,6 +181,7 @@
 		$('#mainainerLink').attr('href','http://dev-data.ecospectra.org');
 	}
 </script>
+<script src="/analytics"></script>
 
 </body>
 </html>
